炎上チェッカーの作成
